2013-04-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Add labeling module in documentation.

	* doc/mln/labeling/labeling.dox: New. Introduce labeling module.

	* mln/labeling/background.hh,
	* mln/labeling/colorize.hh,
	* mln/labeling/compute.hh,
	* mln/labeling/compute_image.hh,
	* mln/labeling/flat_zones.hh,
	* mln/labeling/foreground.hh,
	* mln/labeling/mean_values.hh,
	* mln/labeling/pack.hh,
	* mln/labeling/regional_maxima.hh,
	* mln/labeling/regional_minima.hh,
	* mln/labeling/relabel.hh,
	* mln/labeling/superpose.hh,
	* mln/labeling/value.hh,
	* mln/labeling/value_and_compute.hh,
	* mln/labeling/wrap.hh: Set documentation as part of the labeling
	group.

2013-04-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Add documentation for mln_concrete and mln_ch_value.

	* mln/trait/ch_value.hh,
	* mln/trait/concrete.hh: Here.

2013-04-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Add explanations on compilation with multiple files.

	* doc/examples/multi_files_f1.cc.raw,
	* doc/examples/multi_files_f2.cc.raw,
	* doc/examples/multi_files_main.cc.raw,
	* doc/examples/multiple_def.cc.raw,
	* doc/examples/typenametemplate.cc.raw,
	* doc/examples/undef_global_vars.cc.raw,
	* doc/examples/wrongvaluetype.cc.raw: New.

	* doc/ref-guide.tex: Add a new section.

2013-04-17  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/Doxyfile.in: Expand more macros.

2013-04-17  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/Doxyfile.in: Exclude internal symbols.

2013-04-16  Roland Levillain  <roland@lrde.epita.fr>

	* tests/unit_test/unit-tests.mk: Regen.

2013-04-16  Roland Levillain  <roland@lrde.epita.fr>

	Fix build issues in Milena's documentation.

	* doc/Makefile.am ($(srcdir)/img/small.png): New rule.

2013-04-12  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/Makefile.am: Remove duplicate '/' in path.

2013-04-12  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/Makefile.am: Fix path to documentation.

2013-04-12  Guillaume Lazzara  <z@lrde.epita.fr>
